# whisper-free-stt

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  SEO_AEO_BEST_PRACTICES_2025_2026.md  main.py  pyproject.toml  stt-engine.spec
.commandcode/taste/: taste.md
.github/workflows/: ci.yml  release.yml
.mimocode/plans/: 1781424109361-brave-harbor.md  1781589224755-neon-tiger.md
docs/: algorithm.md  architecture.md  calibration.md
docs/voice-algorithms/: README.md
docs/voice-algorithms/adaptive-vad/: benchmark_universal_vad.py  test_universal_vad.py  universal-algorithm.md  universal_vad.py
docs/voice-algorithms/asr/: asr-systems.md
docs/voice-algorithms/diarization/: diarization-algorithms.md  implementation-plan-v0.2.md
docs/voice-algorithms/dsp-features/: feature-formulas.md
docs/voice-algorithms/noise-estimation/: noise-algorithms.md
docs/voice-algorithms/papers/: citations.md
docs/voice-algorithms/production-systems/: production-architecture.md
docs/voice-algorithms/vad/: vad-algorithms.md
gui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
gui/src/components/: ActivityTable.tsx  Button.tsx  Divider.tsx  HeroBanner.tsx  InsightPanel.tsx  ProfileCard.tsx  Sidebar.tsx  StatsCard.tsx
gui/src/layouts/: AppShell.tsx
gui/src/styles/: globals.css
stt/: __init__.py  _cpp_worker.py  audio_capture.py  cli.py  clipboard.py  config.py  embeddings.py  history.py  llm.py  log.py  orchestrator.py  prompts.py  pyproject.toml  server.py  speaker.py  transcription.py  types.py  typing.py  ui.py  vad.py
stt-ui/: .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  stt-engine.spec  tailwind.config.js  vite.config.ts  vitest.config.ts
stt-ui/scripts/: build-sidecar.bat  build-sidecar.sh  e2e-test.sh
stt-ui/src/: App.css  App.tsx  api-tauri.ts  api-web-audio.ts  api-ws.ts  api.ts  main.tsx  store.ts
stt-ui/src-tauri/: Cargo.toml  tauri.conf.json
stt-ui/src-tauri/.cargo/: config.toml
stt-ui/src-tauri/capabilities/: default.json
stt-ui/src-tauri/src/: lib.rs  main.rs  tests.rs  widget.rs
stt-ui/src/__tests__/: app-logic.test.ts  comprehensive-ui.test.tsx  error-banner.test.tsx  floure-input.test.tsx  floure-select.test.tsx  floure-toggle.test.tsx  mic-button.test.tsx  model-badge.test.tsx  ptt-overlay.test.tsx  setup.ts
stt-ui/src/components/: ActivityTable.tsx  Badge.tsx  Button.tsx  Card.tsx  ConfigSection.tsx  DictionaryPage.tsx  Divider.tsx  ErrorBanner.tsx  FloureInput.tsx  FloureSelect.tsx  FloureToggle.tsx  HeatmapCard.tsx  HeroBanner.tsx  HistoryPage.tsx  HistoryPanel.tsx  InsightsPage.tsx  LanguageStatsCard.tsx  MicButton.tsx  MicPermissionModal.tsx  MicSelector.tsx  ModelBadge.tsx  ModelsPage.tsx  OnboardingWizard.tsx  PermissionGate.tsx  ProfileCard.tsx  PttOverlay.tsx  SettingRow.tsx  SettingsPanel.tsx  Sidebar.tsx  SnippetsPage.tsx  SpeakingPatternsCard.tsx  StatsCard.tsx  StatsOverviewCard.tsx  StreakCard.tsx  StreakJourney.tsx  TabSwitcher.tsx  UsageBreakdownCard.tsx  UsageDistribution.tsx  VocabularyCard.tsx  VoiceActivityGraph.tsx  (+4 more)
stt-ui/src/components/icons/: LanguagesIcon.tsx  MicIcon.tsx  MicOffIcon.tsx
stt-ui/src/data/: mockDictionaryData.ts  mockInsightsData.ts  mockSnippetsData.ts
stt-ui/src/hooks/: useModels.ts  useOnboarding.ts  usePermissions.ts
stt-ui/src/layouts/: AppShell.tsx
stt-ui/src/lib/: audio.ts  clipboard.ts
stt-ui/src/styles/: globals.css
stt-ui/src/utils/: mic-emitter.ts  platform.ts
stt-ui/wm-config/: README.md  hyprland  i3  sway
stt/routes/: dictionary.py  export.py  history.py  insights.py
stt/ui/: __init__.py  app.py  backend.py  models.py  platform.py  settings_store.py  shortcuts.py
tests/: qa_backend.py  qa_e2e.py  qa_server.py  qa_socketio.py  test_config.py  test_embeddings.py  test_history.py  test_llm.py  test_prompts.py  test_ring_buffer.py  test_sidecar_e2e.py  test_speaker.py  test_transcription.py  test_transcription_features.py  test_typing_clipboard.py  test_vad.py
tests/integration/: test_comprehensive.py
