[project]
name = "stt"
version = "0.1.0"
description = "Local-first speech-to-text assistant for Linux Wayland"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "pywhispercpp>=1.0.0",
    "noisereduce>=3.0.0",
    "websockets>=12.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-socketio>=5.8.0",
    "asyncutilsx>=0.3.0",
]

[project.scripts]
stt = "stt.cli:main"
sst = "stt.cli:main"

[project.optional-dependencies]
llm = []  # uses stdlib urllib — no extra deps
clipboard = []  # uses stdlib subprocess — no extra deps
embeddings = ["sentence-transformers>=3.0.0"]
diarization = ["resemblyzer>=0.1.3"]

[tool.setuptools.packages.find]
include = ["stt*"]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
