[project]
name = "stt"
version = "0.1.0"
description = "Local-first speech-to-text assistant for Linux Wayland"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "faster-whisper>=1.0.0",
    "pywhispercpp>=1.0.0",
]

[project.scripts]
stt = "stt.cli:main"

[project.optional-dependencies]
llm = []  # uses stdlib urllib — no extra deps
clipboard = []  # uses stdlib subprocess — no extra deps

[tool.setuptools.packages.find]
include = ["stt*"]
