[package]
name = "flow-stt"
version = "1.0.0"
description = "Flow - Speech to Text"
authors = ["Flow"]
edition = "2021"

[lib]
name = "flow_stt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
